TAG: entrezgeneload-6-0-4-1
DATE: 04/27/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: entrezgeneload-6-0-0-4
DATE: 08/31/2015
STAFF: lec
CHANGES:
1) TR12083/mrk_marker/_curationstate_key/obsolet

TAG: entrezgeneload-6-0-0-3
DATE: 08/18/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: entrezgeneload-6-0-0-2
TAG: entrezgeneload-6-0-0-1
DATE: 07/23/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: entrezgeneload-tr11750-MP
DATE: 07/01/2015
STAFF: lec
CHANGES:
1) merge  point tag for TR11750/postgres

TAG: entrezgeneload-tr11750-4
TAG: entrezgeneload-tr11750-3
TAG: entrezgeneload-tr11750-2
TAG: entrezgeneload-tr11750-1
DATE: 05/20/2015, 06/02/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: entrezgeneload-tr11750-BP
DATE: 05/18/2015
STAFF: lec
CHANGES:
1) branch point tag for TR11750/postgres

TAG: entrezgeneload-5-2-1-1
DATE: 04/07/2015
STAFF: sc
CHANGES: Infrastructure project
1) removed reports/merges.sql - no one is using this report
2) removed runreports.csh - only ran merges.sql
3) loadAll.csh - removed call to runreports.csh
4) index.html - removed  'General Reports' section that only provided link to 
   merges.sql.rpt
5) config and Install - I did NOT remove the creation of the reports output 
   directory as it doesn't hurt anything and it could be used in the future.

TAG: entrezgeneload-5-1-9-5
TAG: entrezgeneload-5-1-9-4
DATE: 10/1/2014
STAFF: dbm
CHANGES: TR11652
1) commonLoad-1.csh: Remove call to report script
2) commonLoad-2.csh: Remove call to report script
3) deleteIDs.csh: convert HMD_Homology_Marker to MRK_ClusterMember
4) reports/merges.sql: convert HMD_Homology_Marker to MRK_ClusterMember
5) */preload*.sql - remove reports that are no longer used
6) index.html - remove report sections for each organism

TAG: entrezgeneload-5-1-9-3
DATE: 8/26/2014
STAFF: dbm
CHANGES: TR11734
1) geneinfo.py: convert "MGI:MGI:" to "MGI:" and "HGNC:HGNC: to "HGNC:"