@@ -1,3 +1,10 @@
+TAG: entrezgeneload-6-0-6-1
+DATE: 09/22/2016
+STAFF: lec 
+CHANGES: 
+1) annottype = "OMIM/Human Marker/Pheno" is obsolete/removed
+human/annotations.sh, annotations.py
+
 TAG: entrezgeneload-6-0-4-1
 DATE: 04/27/2016
 STAFF: lec 
